# downrisk-get

./: .gitignore  ANALYSIS_14COMPANIES_REPORT.md  CHANGELOG_V7.3.1.md  COMPLETE_WORKFLOW_V7.3_UPDATED.md  DEEP_INDUSTRY_ANALYSIS.md  DETAILED_ANALYSIS_9COMPANIES.md  EXECUTION_GUIDE_V7.3.md  FINAL_RANKING_REPORT_V7.1.md  FUNDAMENTALS_ANALYSIS_REPORT.md  PROJECT_SUMMARY.md  QUICK_REFERENCE_V7.3.md  README.md  V7.3_COMPLETE_RANKING_23COMPANIES_2025Q3.md  VALUATION_ANALYSIS.md  VALUATION_ANALYSIS_YAHOO_FINANCE.md  analysis_14companies.xlsx  analysis_9companies.xlsx  analysis_detailed.xlsx  analysis_fundamentals_based.xlsx  final_results.xlsx  pyproject.toml  requirements.txt  scheme_c_results.xlsx
config/: companies.yml  companies_14batch.yml  companies_14batch_v2.yml  companies_14batch_v3_valuation_adjusted.yml  companies_14batch_v4_corrected_valuation.yml  companies_14batch_v5_yahoo_finance.yml  companies_14batch_v6_comprehensive.yml  companies_15batch.yml  companies_analysis.yml  companies_request.yml  companies_v2.yml  sectors.yml  valuation_data_sources.yml  vtr_ranking_request.yml
data/: expected_return_macro_adjusted_V7.3.2.md  macro_themes_2025Q4.md  valuation_data.xlsx  valuation_data.yml  vtr_yahoo_results.xlsx  yahoo_metrics_extended.xlsx  yahoo_metrics_extended.yml
docs/: ANALYSIS_SUMMARY.md  ASMPT_DEEP_ANALYSIS.md  CALCULATION_COMPARISON.md  COMPREHENSIVE_ANALYSIS_V6.md  EBIT_RATE_ASSUMPTIONS.md  EXAMPLES.md  EXECUTION_FLOWCHART_V7.3.md  EXPECTED_RETURN_FRAMEWORK_V2.md  EXPECTED_RETURN_METHODOLOGY.md  METHODOLOGY.md  PRECISE_INDUSTRY_SEGMENTATION_V7.md  (+6 more)
(+54 files in other folders)
